@@ -1,3 +1,8 @@
+2008-02-22  Jean-Paul Calderone  <exarkun@twistedmatrix.com>
+
+	* src/ssl/connection.c src/ssl/context.c src/ssl/ssl.c: Fix
+	  compilation on Windows.  (patch from Michael Schneider)
+
 2008-02-21  Jean-Paul Calderone  <exarkun@twistedmatrix.com>
 
 	* src/ssl/connection.c: Expose SSL_get_shutdown and
